update library for Angular 17 support

--- a/src/app/dropdown-treeview-select/dropdown-treeview-select-demo.component.html
+++ b/src/app/dropdown-treeview-select/dropdown-treeview-select-demo.component.html
@@ -1,5 +1,6 @@
 <h3>Template (
-  <a href="https://github.com/leovo2708/ngx-treeview/tree/master/src/app/dropdown-treeview-select" target="_blank">source code</a>)</h3>
+  <a href="https://github.com/tapbeep/ngx-treeview2/tree/master/src/app/dropdown-treeview-select" target="_blank">source
+    code</a>)</h3>
 <ul>
   <li>Write a custom component <i>ngx-dropdown-treeview-select</i> to support single selection by using custom template</li>
 </ul>
