--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="#">ngx-treeview</a>
   <div class="navbar-nav mr-auto"></div>
-  <a class="github-button" href="https://github.com/leovo2708/ngx-treeview" data-icon="octicon-star" data-size="large"
-    data-show-count="true" aria-label="Star leovo2708/ngx-treeview on GitHub">Star</a>
+  <a aria-label="Star tapbeep/ngx-treeview2 on GitHub" class="github-button" data-icon="octicon-star" data-show-count="true"
+     data-size="large" href="https://github.com/tapbeep/ngx-treeview2">Star</a>
 </header>
 <div class="container-fluid">
   <div class="row">
